# sc-discord-bot

./: .dockerignore  .env.local.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  requirments.txt  run.ps1  run.sh  tox.ini
.github/workflows/: ci.yml
scripts/: deploy.sh  run.sh
src/: bot.py  http_cache.py  main.py  rsi_status.py  storage.py
src/commands/: armor.py  autocomplete.py  checks.py  clothes.py  commodity.py  find.py  formatting.py  hangar.py  inventory.py  item.py  lookup.py  mine.py  ship_weapons.py  shipprice.py  ships.py  status.py  stream.py  timer.py  vehicle_item.py  weapon_attachment.py  weapons.py
src/exec_hangars/: __init__.py  constants.py  hangar.py  schedule.py  states.py  status.py
src/starcitizenwiki_api/: __init__.py  _common.py  armor.py  blueprints.py  celestial_objects.py  client.py  clothes.py  comm_links.py  factions.py  food.py  galactapedia.py  game_versions.py  gravlev_vehicles.py  ground_vehicles.py  items.py  locations.py  manufacturers.py  mineables.py  missions.py  ship_weapons.py  ships.py  starsystems.py  stats.py  vehicle_items.py  weapon_attachments.py  weapons.py  wiki_commodities.py
src/streaming/: __init__.py  tiktok.py  twitch.py  youtube.py
src/uex_api/: __init__.py  _common.py  client.py  commodities.py  models.py  prices.py  star_systems.py  terminals.py  vehicle_prices.py  vehicles.py
tests/: test_find_wikelo.py  test_formatting.py  test_hangar.py  test_http_cache.py  test_inventory_helpers.py  test_inventory_subscriptions.py
tests/commands/: test_timer.py
tests/uex_api/: test_catalog.py  (+1 more)
(+84 files in other folders)
