[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-discord-bot"
version = "0.3.0"
description = "Star Citizen Discord bot"
requires-python = ">=3.11"
dependencies = [
    "discord.py==2.7.1",
    "python-dotenv",
    "aiohttp==3.14.1",
    "aiosqlite==0.20.0",
    "table2ascii==1.2.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[project.scripts]
sc-bot = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.commands.inventory" = ["fonts/*.ttf"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",   # line too long — enforced by formatter, not checker
]
